fixed layout shift padding in input fields.

--- a/frontend/src/app/article-card/article-card.component.scss
+++ b/frontend/src/app/article-card/article-card.component.scss
@@ -103,7 +103,9 @@
             
             input, textarea {
               height: 100%;
-              padding: 0 8px;
+              padding: 0;
+              border: none;
+              background: transparent;
             }
           }
         }
